Refactor: nio -> io로 변경